--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -824,6 +824,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .ml-10 {
   margin-left: 2.5rem;
 }
@@ -862,6 +866,10 @@ video {
 
 .mr-5 {
   margin-right: 1.25rem;
+}
+
+.mr-7 {
+  margin-right: 1.75rem;
 }
 
 .mt-1 {
@@ -914,10 +922,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mr-7 {
-  margin-right: 1.75rem;
 }
 
 .box-border {
@@ -1528,6 +1532,10 @@ video {
 
 .grid-flow-col-dense {
   grid-auto-flow: column dense;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-2 {
@@ -2281,11 +2289,6 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-b1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 59 62 / var(--tw-bg-opacity));
-}
-
 .bg-b4 {
   --tw-bg-opacity: 1;
   background-color: rgb(164 181 184 / var(--tw-bg-opacity));
@@ -2546,6 +2549,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pb-\[100px\] {
+  padding-bottom: 100px;
+}
+
+.pb-\[30px\] {
+  padding-bottom: 30px;
+}
+
 .pb-\[80px\] {
   padding-bottom: 80px;
 }
@@ -2554,12 +2565,20 @@ video {
   padding-left: 0px;
 }
 
+.pl-\[10px\] {
+  padding-left: 10px;
+}
+
 .pl-\[150px\] {
   padding-left: 150px;
 }
 
 .pl-\[170px\] {
   padding-left: 170px;
+}
+
+.pl-\[20px\] {
+  padding-left: 20px;
 }
 
 .pl-\[30px\] {
@@ -2594,64 +2613,24 @@ video {
   padding-top: 1.75rem;
 }
 
+.pt-\[100px\] {
+  padding-top: 100px;
+}
+
 .pt-\[10px\] {
   padding-top: 10px;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-\[200px\] {
-  padding-left: 200px;
-}
-
-.pl-\[100px\] {
-  padding-left: 100px;
-}
-
-.pl-\[20px\] {
-  padding-left: 20px;
-}
-
-.pt-0 {
-  padding-top: 0px;
 }
 
 .pt-\[200px\] {
   padding-top: 200px;
 }
 
-.pt-\[100px\] {
-  padding-top: 100px;
-}
-
-.pt-52 {
-  padding-top: 13rem;
-}
-
-.pb-\[100px\] {
-  padding-bottom: 100px;
-}
-
-.pb-\[30px\] {
-  padding-bottom: 30px;
-}
-
-.pl-\[10px\] {
-  padding-left: 10px;
+.pt-\[20px\] {
+  padding-top: 20px;
 }
 
 .pt-\[50px\] {
   padding-top: 50px;
-}
-
-.pt-\[20px\] {
-  padding-top: 20px;
 }
 
 .text-left {
@@ -3689,6 +3668,10 @@ video {
     width: 100%;
   }
 
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -3711,10 +3694,6 @@ video {
 
   .md\:justify-start {
     justify-content: flex-start;
-  }
-
-  .md\:justify-end {
-    justify-content: flex-end;
   }
 
   .md\:justify-center {
@@ -3807,12 +3786,24 @@ video {
     padding-bottom: 1.25rem;
   }
 
+  .md\:pl-0 {
+    padding-left: 0px;
+  }
+
   .md\:pl-12 {
     padding-left: 3rem;
   }
 
+  .md\:pl-96 {
+    padding-left: 24rem;
+  }
+
   .md\:pl-\[100px\] {
     padding-left: 100px;
+  }
+
+  .md\:pl-\[250px\] {
+    padding-left: 250px;
   }
 
   .md\:pl-\[350px\] {
@@ -3837,22 +3828,6 @@ video {
 
   .md\:pt-5 {
     padding-top: 1.25rem;
-  }
-
-  .md\:pl-\[250px\] {
-    padding-left: 250px;
-  }
-
-  .md\:pl-56 {
-    padding-left: 14rem;
-  }
-
-  .md\:pl-96 {
-    padding-left: 24rem;
-  }
-
-  .md\:pl-0 {
-    padding-left: 0px;
   }
 
   .md\:pt-52 {
@@ -3946,6 +3921,10 @@ video {
 
   .lg\:w-\[30rem\] {
     width: 30rem;
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:text-5xl {
